# HC_lit_data

./: .gitignore  README.md  pyproject.toml
DOI_retrieve/: README.md  doi_crossref.py  doi_retrieve.py  doi_retrieve_tools.py  doi_sem_scholar.py  query.txt
DOI_retrieve/tests/: query_test.txt  setup.cfg  test_doi_retrieve_tools.py
DOI_search/: README.md  doi_crossref.py  doi_search.py  doi_search_tools.py  doi_sem_scholar.py  query.toml
article_extraction/: README.md  add_abstract.py  article_to_json.py  captions_extractor.py  extractor_tools.py  figure_downloader.py  json_section_extract.py  json_to_md.py  section_extractor.py  tables_extractor.py  to_json.py
article_filter/: eval_filter.py  filter_articles.py  get_abstract.py  prompt.md
article_retrieve/: README.MD  README.md  acs_rsc_doi_to_article.py  doi_to_article.py  requirements.txt
article_retrieve/scraper_tools/: link.py  scraper.py  utils.py
data_annotation/datasets/: echem_methods.jsonl  echem_methods_annotated.jsonl
data_annotation/scripts/: prepare_import.py
data_extraction/json_schemas/: echem_schema.json  echem_schema.py
data_extraction/prompts/: extract_echem_method.md
data_extraction/scripts/: extract_echem_method.py
input_app/: source.py
test_data/input/: relevant_dois.txt  test_filter_doi.txt
test_data/input_filter/: not_relevant_dois.txt  test_extract_dois.txt
test_data/input_methods_extract/: 10.1016-j.mtsust.2022.100313.md
test_data/synthesis_extract/: 10.1007-s10853-018-2472-4.md  10.1016-j.carbon.2017.12.103.md
