[project]
name = "lit-retrieve"
version = "0.1.0"
description = "Pipeline for searching, retrieving, and extracting scientific literature data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # HTTP and web scraping
    "requests>=2.32.3",
    "selenium==4.25.0",
    "webdriver-manager>=4.0.2",
    # HTML/XML parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Image handling (figure_downloader)
    "Pillow>=10.0",
    # NOTE: LimeSoup must be installed manually from GitHub.
    # See the README for installation instructions.
]
